# agentic-interview-lab

./: .dockerignore  .env.example  Dockerfile  PYDANTIC_DEEP_DIVE.md  PYDANTIC_IMPLEMENTATION_EXAMPLES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
prompts/common/: evaluator_base.txt  generator_base.txt  json_repair.txt  json_rules.txt
prompts/lanes/: ai_coding.txt  ai_theory.txt  backend_coding.txt  backend_theory.txt  frontend_coding.txt  frontend_theory.txt
schemas/: evaluation.v1.json  question.v1.json
scripts/: export_schemas.py  run_generate_question.py
src/interview_lab/: __init__.py  api.py  llm_client.py  models.py  pipeline.py
src/interview_lab/web/: index.html
src/interview_lab/web/assets/: app.js  main.css
tests/: test_models.py  test_pipeline.py  test_schema_sync.py
