[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-interview-lab"
version = "0.1.0"
description = "Prompt contracts and validation for interview question generation and evaluation"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
